# dining_philosophers

./: CMakeLists.txt  README.md
app/include/: dining_philosophers.h
app/src/: dining_philosophers.c
